# keychain

./: Cargo.toml
src/: crypto.rs  db.rs  main.rs
src/cli/: delete.rs  edit.rs  list.rs  mod.rs  read.rs  save.rs
src/cli/delete/: public.rs  secret.rs
src/cli/edit/: public.rs  secret.rs
src/cli/read/: public_pair.rs  secret_pair.rs
src/cli/save/: public_save.rs  secret_save.rs
