[package]
name = "keychain"
version = "0.1.0"
edition = "2021"
description = "A CLI for managing encrypted key-value pairs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
clap = { version = "4.4.12", features = ["derive"] }
magic-crypt = "3.1.13"
rusqlite = { version = "0.30.0", features = ["bundled"] }

